# vrl-lsp

./: Cargo.toml  package.json  pnpm-lock.yaml
client/: language-configuration.json  package.json  pnpm-lock.yaml
client/syntaxes/: vrl.tmLanguage.json
src/: main.rs
