[package]
name = "vrl-lsp"
version = "0.0.2"
edition = "2021"
rust-version = "1.78.0"
authors = ["Arshia Soleimani"]
description = "Language server for Vrl (Vector Remap Language). "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrl = { version = "0.18.0", default-features = false, features = [
    "compiler",
    "diagnostic",
    "stdlib",
] }
tower-lsp = "0.20.0"
tokio = { version = "1.40.0",  features = ["io-std"] }
codespan-lsp =  "0.11.1"
codespan-reporting = "0.11.1"
